fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,7 @@ input:focus {
 .feed li {
   display: flex;
   background-color: #444654;
-  width: 100%;
+  width: auto;
   padding: 20px;
   margin: 20px 0;
   border-radius: 8px;
